--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
-
-<p-toolbar>    
+<p-toolbar>
+    <button pButton type="button" *ngFor="let item of mods" [label]="item" (click)="navigate(item)" class="ui-button-secondary" style="margin-left:2px"></button>
     <div class="ui-toolbar-group-right">
-        <button pButton type="button" icon="fa fa-power-off"  class="ui-button-secondary"></button>
+        <button pButton type="button" icon="fa fa-power-off" class="ui-button-secondary"></button>
     </div>
 </p-toolbar>
