first working chart

--- a/src/app/highlights/highlights.component.html
+++ b/src/app/highlights/highlights.component.html
@@ -1,3 +1,7 @@
-<p>
-  highlights works!
-</p>
+<p-card title="Ratings" subtitle="Average Rating Trend Of Your Business" styleClass="ui-card-shadow">
+    <p-chart type="bar" [data]="data"></p-chart>
+</p-card>
+<br/>
+<p-card title="Ratings Distribution" subtitle="Average Rating Distribution Of Your Business" styleClass="ui-card-shadow">
+
+</p-card>
