highlights - charg option change

--- a/src/app/highlights/highlights.component.html
+++ b/src/app/highlights/highlights.component.html
@@ -1,7 +1,7 @@
 <p-card title="Ratings" subtitle="Average Rating Trend Of Your Business" styleClass="ui-card-shadow">
     <div class="ui-g">
         <div class="ui-g-8">
-            <p-chart type="bar" [data]="rating_data"></p-chart>
+            <p-chart type="bar" [data]="rating_data" [options]="rating_opt"></p-chart>
         </div>
         <div class="ui-g-4">
             <p-card>
